example-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-1
  labels:
    app: example-1
spec:
  selector:
    app: example-1
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
